@@ -15,6 +15,7 @@ Unreleased
 - updated default Mellanox Infiniband drivers to version 5.4
 - fix get-node-inventory action
 - fix influxdb-info slurmctld action
+- fix etcd not being configured after an upgrade
 
 0.9.0 - 2022-04-12
 ------------------
